removed unnecessary dictionary assigments.

--- a/cmfs.ipynb
+++ b/cmfs.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -175,15 +175,10 @@
     }
    ],
    "source": [
-    "doc_token_count = {}\n",
     "# Step 1: Obtain sum of all features in category c_i\n",
-    "for num, l in enumerate(corpus):\n",
-    "    doc_token_count[num] = sum(val for _, val in l)\n",
-    "\n",
     "# Step 2: Obtain frequency of feature t_k in the entire training set\n",
-    "token_doc_count = dictionary.dfs\n",
-    "\n",
     "# Step 3: Obtain frequency of t_k in category c_i\n",
+    "# First two steps can be performed later by acting on the matrix.\n",
     "for docno, doc in enumerate(corpus):\n",
     "    for term, freq in doc:\n",
     "        matrix[term][docno] = freq\n",
@@ -200,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
