Added Mrunmayee's name.

--- a/CMFS_20NG.ipynb
+++ b/CMFS_20NG.ipynb
@@ -20,6 +20,7 @@
     "         Bhargav Srinivasa\n",
     "         Devashish Deshpande\n",
     "         Gauri Kholkar\n",
+    "         Mrunmayee Nasery\n",
     "\"\"\"\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -153,7 +154,7 @@
     "    # Frequency of the term across all categories\n",
     "    total_term_freq = sum(term_category_mat[term, :])\n",
     "    for cat in range(categories):\n",
-    "        numerator = float((term_category_mat[term][cat] + 1) ** 2)\n",
+    "        numerator = float(((term_category_mat[term][cat] + 1) ** 2))\n",
     "        denominator = (total_term_freq + categories) * (term_freq_per_cat[cat] + terms)\n",
     "        term_category_mat[term][cat] = numerator / denominator\n",
     "        \n",
