--- a/CMFS_20NG.ipynb
+++ b/CMFS_20NG.ipynb
@@ -27,7 +27,8 @@
     "from pprint import pprint\n",
     "from gensim.corpora import Dictionary\n",
     "import numpy as np\n",
-    "import operator"
+    "import operator\n",
+    "from sklearn.feature_selection import VarianceThreshold"
    ]
   },
   {
@@ -111,6 +112,20 @@
    ],
    "source": [
     "print \"Term-category matrix shape: {0}\".format(term_category_mat.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# New Matrix after applying Variance. \n",
+    "selector = VarianceThreshold()\n",
+    "selector.fit(term_category_mat)\n",
+    "selector.fit_transform(term_category_mat)"
    ]
   },
   {
@@ -243,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
