Added naive bayes classification for testing.

--- a/CMFS_20NG.ipynb
+++ b/CMFS_20NG.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -24,15 +24,15 @@
     "\"\"\"\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from pprint import pprint\n",
-    "from gensim.corpora import Dictionary\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn import metrics\n",
     "import numpy as np\n",
     "import operator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,15 +40,16 @@
    "source": [
     "newsgroups_train = fetch_20newsgroups(subset='train', remove=('headers', 'footers', 'quotes'))\n",
     "vec = CountVectorizer(stop_words='english')\n",
-    "matrix = vec.fit_transform(newsgroups_train.data).T\n",
+    "document_term_mat = vec.fit_transform(newsgroups_train.data)\n",
+    "term_document_mat = document_term_mat.T\n",
     "documents = len(newsgroups_train.filenames)\n",
     "categories = len(newsgroups_train.target_names)\n",
-    "terms = matrix.shape[0]"
+    "terms = term_document_mat.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -67,9 +68,9 @@
    ],
    "source": [
     "print \"No. of documents: %d\\nNo. of categories: %d\" % (documents, categories)\n",
-    "print \"matrix.shape: {0}\".format(matrix.shape)\n",
+    "print \"matrix.shape: {0}\".format(term_document_mat.shape)\n",
     "print newsgroups_train.target[10]\n",
-    "print type(matrix)"
+    "print type(term_document_mat)"
    ]
   },
   {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -90,13 +91,13 @@
     "term_category_mat = np.zeros((terms, categories))\n",
     "for doc in range(documents):\n",
     "    cat = newsgroups_train.target[doc]\n",
-    "    for row in matrix.getcol(doc).nonzero()[0]:\n",
+    "    for row in term_document_mat.getcol(doc).nonzero()[0]:\n",
     "        term_category_mat[row][cat] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -171,31 +172,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Create term id (i.e. row no) - CMFS dict\n",
     "term_cmfs_dict = {}\n",
     "cmfs_max = np.max(term_category_mat, axis=1)\n",
-    "# Integer to term mapping dictionary\n",
-    "dictionary = vec.get_feature_names()\n",
     "for i in range(terms):\n",
-    "    term = dictionary[i]\n",
-    "    term_cmfs_dict[term] = cmfs_max[i]"
+    "    term_cmfs_dict[i] = cmfs_max[i]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract top 10 features"
+    "### Extract top 2000 features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Integer to term mapping dictionary\n",
+    "dictionary = vec.get_feature_names()\n",
+    "\n",
+    "sorted_feature_list = sorted(term_cmfs_dict.items(), key=operator.itemgetter(1), reverse=True)[:2000]\n",
+    "# print \"-------Selected features are-------\\n\"\n",
+    "# for term, cmfs in sorted_feature_list:\n",
+    "#     print \"Term: {0} \\t CMFS: {1}\".format(dictionary[term], cmfs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Naive bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -204,26 +227,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------Selected features are-------\n",
-      "\n",
-      "Term: bike \t CMFS: 0.000538368944352\n",
-      "Term: sale \t CMFS: 0.000443215660653\n",
-      "Term: car \t CMFS: 0.000417589539819\n",
-      "Term: mac \t CMFS: 0.000308104950966\n",
-      "Term: apple \t CMFS: 0.000280403476571\n",
-      "Term: shipping \t CMFS: 0.000253629460498\n",
-      "Term: hockey \t CMFS: 0.000244798088796\n",
-      "Term: cars \t CMFS: 0.000222399959724\n",
-      "Term: god \t CMFS: 0.000214102332086\n",
-      "Term: encryption \t CMFS: 0.000198331154092\n"
+      "(11314, 2000)\n"
      ]
     }
    ],
    "source": [
-    "sorted_feature_list = sorted(term_cmfs_dict.items(), key=operator.itemgetter(1), reverse=True)[:10]\n",
-    "print \"-------Selected features are-------\\n\"\n",
-    "for term, cmfs in sorted_feature_list:\n",
-    "    print \"Term: {0} \\t CMFS: {1}\".format(term, cmfs)"
+    "feature_list = [term for term, _ in sorted_feature_list]\n",
+    "# Create matrix for only the selected features. Note that the features are being extracted\n",
+    "# on the original document-term matrix. This will help in mapping with the targets easily.\n",
+    "selected_feature_matrix = document_term_mat[:, feature_list]\n",
+    "print selected_feature_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "newsgroups_test = fetch_20newsgroups(subset='test', remove=('headers', 'footers', 'quotes'))\n",
+    "document_term_mat_test = vec.transform(newsgroups_test.data)\n",
+    "clf = MultinomialNB().fit(selected_feature_matrix, newsgroups_train.target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.62599575146\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = clf.predict(document_term_mat_test[:, feature_list])\n",
+    "print metrics.f1_score(newsgroups_test.target, pred, average='micro')"
    ]
   }
  ],
