Added latex math eq in display mode.

--- a/CMFS_20NG.ipynb
+++ b/CMFS_20NG.ipynb
@@ -123,7 +123,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perform CMFS, iCMFS and CC term-category matrix"
+    "### Perform CMFS, iCMFS and CC term-category matrix\n",
+    "\n",
+    "\\begin{equation}\n",
+    "iCMFS(T_k, C_i) = P(T_k|C_i) * P(C_i, T_k) / P(C_i)\n",
+    "\\end{equation}"
    ]
   },
   {
